add 8 slider for train

--- a/index.html
+++ b/index.html
@@ -51,38 +51,115 @@
         Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
     <table>
-      <tr>
-        <td colspan="3">body angle</td>
-      </tr>
-      <tr>
-        <td>-180</td>
-        <td><input id="sliderBody" type="range"
-         min="-180" max="180" step="10" value="45"
-          /> </td>
-         <td>180</td>
-       </tr>
-
-       <tr>
-         <td colspan="3">legs angle</td>
-       </tr>
-       <tr>
-         <td>-180</td>
-         <td><input id="sliderLeg" type="range"
-          min="-180" max="180" step="10" value="45"
-           /> </td>
-          <td>180</td>
+        <tr>
+            <td colspan="3">body angle</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="sliderBody" type="range" min="-180" max="180" step="10" value="45" /> </td>
+            <td>180</td>
         </tr>
 
         <tr>
-          <td colspan="3">head angle</td>
+            <td colspan="3">legs angle</td>
         </tr>
         <tr>
-          <td>-180</td>
-          <td><input id="sliderHead" type="range"
-           min="-180" max="180" step="10" value="-90"
-            /> </td>
-           <td>180</td>
-         </tr>
+            <td>-180</td>
+            <td>
+                <input id="sliderLeg" type="range" min="-180" max="180" step="10" value="45" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">head angle</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="sliderHead" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 1</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider1" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 2</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider2" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 3</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider3" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 4</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider4" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 5 </td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider5" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 6</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider6" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 7</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider7" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
+
+        <tr>
+            <td colspan="3">train 8</td>
+        </tr>
+        <tr>
+            <td>-180</td>
+            <td>
+                <input id="slider8" type="range" min="-180" max="180" step="10" value="-90" /> </td>
+            <td>180</td>
+        </tr>
     </table>
 </body>
 
