add toole lighting

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <option value="perl">Perl</option>
             <option value="obsidian">Obsidian</option>
         </select>
+        <input type="checkbox" name="lighting" id="toogleLighting" checked> Toogle Lighting
     </div>
     <table>
         <tr>
