--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec4 vPosition;
     attribute vec3 vNormal;
+    attribute  vec2 vTexCoord;
     varying vec4 fColor;
+    varying vec2 fTexCoord;
 
     uniform vec4 ambientProduct, diffuseProduct, specularProduct;
     uniform mat4 modelViewMatrix;
@@ -67,6 +69,8 @@
         if(isSphere == 1) {
             fColor = vec4(1.0,1.0,0.0,1.0);
         }
+
+        fTexCoord = vTexCoord;
     }
 </script>
 
@@ -75,10 +79,12 @@
     precision mediump float;
 
     varying  vec4 fColor;
+    varying  vec2 fTexCoord;
+    uniform sampler2D texture;
 
     void main()
     {
-        	gl_FragColor = fColor;
+        	gl_FragColor = fColor*texture2D( texture, fTexCoord );;
     }
 </script>
 <script type="text/javascript" src="Common/webgl-utils.js"></script>
