--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
             <td>180</td>
         </tr>
     </table>
+
+    <img src="texture1.jpeg" id="texture1" hidden>
+    <img src="texture2.jpeg" id="texture2" hidden>
 </body>
 
 </html>
