--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     uniform int isShadow;
     uniform int isSphere;
     uniform float lighting;
+    uniform int isView;
 
     void main()
     {
@@ -53,17 +54,16 @@
         vec4  specular = Ks * specularProduct;
         
         if( dot(L, N) < 0.0 ) {
-        specular = vec4(0.0, 0.0, 0.0, 1.0);
+            specular = vec4(0.0, 0.0, 0.0, 1.0);
         } 
 
-        float zToDivideBy = 1.0 + vPosition.z * 0.25;
+        float zToDivideBy = 1.0 + vPosition.z * 0.1;
         gl_Position = projectionMatrix * modelViewMatrix * vec4(vPosition.xyz,zToDivideBy);
 
         if (isShadow == 1){
         	fColor = vec4(0,0,0,1);
         } else {
 	        fColor = lighting * (ambient + diffuse + specular);
-	        
 	        fColor.a = 1.0;
         }
 
@@ -83,9 +83,12 @@
     varying  vec2 fTexCoord;
     uniform sampler2D texture;
     uniform int activeTexture;
+   
 
     void main()
-    {       if(activeTexture == 1){
+    {       
+
+            if(activeTexture == 1){
                 gl_FragColor = fColor*texture2D( texture, fTexCoord );
             } else {
                 gl_FragColor = fColor;
